form working no ln

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
   
 
 
-  
+
   <!-- Start Contact Form -->
   <div class="row contact-us">
   <div class="col-md-8 col-md-offset-2">
@@ -239,14 +239,14 @@
       <div class="col-sm-6">
         <div class="form-group">
           <div class="controls">
-            <p class="field-wrapper required-field">First Name<span class="red">*</span></p>
+            <p class="field-wrapper required-field">Name<span class="red">*</span></p>
             <input type="text" id="firstname" class="form-control" required data-error="Please enter your name">
             <div class="help-block with-errors"></div>
           </div>
         </div>
       </div>
 
-      <div class="col-sm-6">
+<!--       <div class="col-sm-6">
         <div class="form-group">
           <div class="controls">
             <p>Last Name</p>
@@ -254,9 +254,9 @@
             <div class="help-block with-errors"></div>
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="col-sm-12">
+      <div class="col-sm-6">
         <div class="form-group">
           <div class="controls">
             <p class="field-wrapper required-field">Email<span class="red">*</span></p>
