--- a/index.html
+++ b/index.html
@@ -21,9 +21,16 @@
     <img alt="Brand" class="logo" src="img/home/logo.png">
   </div>
 
+<div class="jumbotron">
+    <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 jumbotrontext">
+    <h1 class="display-3">What Now?</h1>
+    <p class="lead">Take Action and Support Refugees</p>
+  </div>
+</div>
+
 
 <!-- cover -->
-<div class="site-wrapper">
+<!-- <div class="site-wrapper">
   <div class="site-wrapper-inner">
     <div class="cover-container">
 
@@ -41,7 +48,7 @@
 
     </div>
   </div>
-</div>
+</div> -->
 <!-- /cover -->
 
 <div class="container-fluid">
@@ -148,7 +155,7 @@
   
   <div class="row">  
 
-    <a target="_blank" href="http://classroom.therefugeecenter.org/programs/volunteering-with-refugees">
+    <a target="_blank" href="https://docs.google.com/spreadsheets/d/11THcAlc-J5HBmFNjEpbLsyP1zA8Vunuriz0yLnD-W2E/edit#gid=676906325">
       <div class="col-md-6 col-xs-12 card gt-1">
         <div class="highlight-3"><p>Volunteer</p></div>
         <p>Your Time</p>
@@ -166,7 +173,7 @@
   
   <div class="row"> 
 
-    <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSewHXJ-FG-_qhXHnK-qquVcYFh576TCZD9OfBDTo88g9rWxOw/viewform?c=0&w=1"> 
+    <a target="_blank" href=" http://www.unrefugees.org/fundraise-refugees/"> 
       <div class="col-md-6 col-xs-12 card gt-3">
         <div class="highlight-3"><p>Host</p></div>
         <p>a Community Event</p>
